# dragons-frogma

./: .gitignore  .gitmodules  .mcp.json  Cargo.toml  WINDOWS_TEST_BOOTSTRAP.md
crates/frogma-harness/: Cargo.toml
crates/frogma-harness/src/: main.rs
crates/frogma-peer/: Cargo.toml
crates/frogma-peer/src/: lib.rs
crates/frogma-plugin/: Cargo.toml
crates/frogma-plugin/src/: lib.rs
crates/frogma-wire/: Cargo.toml
crates/frogma-wire/src/: lib.rs
knowledge/: README.md
knowledge/adr/: 0001-charter.md  0001-mvp-charter.md  0002-transparency.md  0002-transport.md  0003-asynchrony.md  0003-rendering.md  0004-event-driven.md  0005-lagrangian-relaxation.md  0006-pet-project-scope.md
knowledge/context/: constraints.md
knowledge/graph/: seed.jsonl
knowledge/research/: q0001-precedent-patterns.md  q0002-dd2-modding-state.md  q0003-bfs-frontier.md
knowledge/schemas/: component.v1.json  decision.v1.json  event.v1.json  finding.v1.json  invariant.v1.json  question.v1.json
knowledge/scripts/: seed.py  seed.sh
